[gd_scene load_steps=4 format=2]

[ext_resource path="res://ArtAssets/position_arrow.png" type="Texture" id=1]
[ext_resource path="res://PositionArrow.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 53.3624
height = 49.8564

[node name="PositionArrow" type="Sprite"]
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 8.90898, -13.8089 )
rotation = 1.5708
shape = SubResource( 1 )

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
